feat: Add admin API which returns all enrolled users
